--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="search">Search</string>
     <string name="search_type">Search Type:</string>
     <string name="include_internet_explainer">Include Internet Explainer</string>
+    <string name="copy">Copy</string>
 </resources>
